tests/idris2/error009/expected
Error: Module DoesntExist not found

Exists:1:1--1:19
 1 | import DoesntExist
     ^^^^^^^^^^^^^^^^^^

Main> Bye for now!
